<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/showTipsRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/headerImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/mightybird_starglow_header_1080p" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp" >

            <TextView
                android:id="@+id/tipsTitle"
                style="@style/TitleText.Normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tips_title" />

            <TextView
                android:id="@+id/tipsText"
                style="@style/NormalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dis_mode_description" />

            <Button
                android:id="@+id/buttonSkip"
                style="@style/Button.Solid.Normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/cool" 
                android:onClick="advanceToLogin"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>