<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (c) 2011 ETH Zurich. All rights reserved. This program and 
	the accompanying materials are made available under the terms of the GNU 
	Public License v2.0 which accompanies this distribution, and is available 
	at http://www.gnu.org/licenses/old-licenses/gpl-2.0.html Contributors: Paolo 
	Carta - Implementation Theus Hossmann - Implementation Dominik Schatzmann 
	- Message specification
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/showConditionsRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/unit_step" >

        <TextView
            android:id="@+id/textConditionTitle"
            style="@style/RobotoLightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_conditions"
            android:textColor="?attr/accentColor1"
            android:textSize="32sp"
            android:textStyle="italic" />

        <!-- 0dp height trick to push the buttons to the bottom of the view -->
        <TextView
            android:id="@+id/textConditions"
            style="@style/RobotoLightText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:layout_marginTop="@dimen/double_step"
            android:textSize="16sp"
            android:textColor="@color/dark_text"
            android:text="@string/conditions" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonAgree"
                style="@style/Button.Solid.NormalMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/half_step"
                android:layout_weight="1.0"
                android:onClick="agreeToTerms"
                android:text="@string/agree" />

            <Button
                android:id="@+id/buttonDecline"
                style="@style/Button.Outline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/half_step"
                android:layout_weight="1.0"
                android:text="@string/decline" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>