<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (c) 2011 ETH Zurich. All rights reserved. This program and 
	the accompanying materials are made available under the terms of the GNU 
	Public License v2.0 which accompanies this distribution, and is available 
	at http://www.gnu.org/licenses/old-licenses/gpl-2.0.html Contributors: Paolo 
	Carta - Implementation Theus Hossmann - Implementation Dominik Schatzmann 
	- Message specification
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/showLoginRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/mightybird_starglow_background_1080p" />

    <!-- container for padding -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:padding="24dp" >

        <TextView
            android:id="@+id/twimightTitle"
            style="@style/TitleText.Normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:layout_marginBottom="0dp"
            android:text="@string/welcome" />

        <TextView
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/twimightTitle"
            android:gravity="center"
            android:text="@string/mighty"/>

        <Button
            android:id="@+id/buttonLogin"
            style="@style/Button.Solid.Normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/login" />
    </RelativeLayout>

</RelativeLayout>