<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/showTipsRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/headerImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/disaster_illustration" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:orientation="vertical"
            android:padding="@dimen/unit_step" >

            <TextView
                android:id="@+id/tipsTitle"
                style="@style/RobotoLightText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tips_title"
                android:textColor="?attr/accentColor1"
                android:textSize="32sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tipsText"
                style="@style/RobotoLightText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/double_step"
                android:layout_weight="1.0"
                android:text="@string/dis_mode_description"
                android:textColor="@color/dark_text"
                android:textSize="16sp" />

            <Button
                android:id="@+id/buttonSkip"
                style="@style/Button.Solid.NormalMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:onClick="advanceToLogin"
                android:text="@string/cool" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>